[gd_scene load_steps=8 format=2]

[ext_resource path="res://src/SnapArea.gd" type="Script" id=1]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 1.001, 1.001, 1.001 )

[sub_resource type="CubeMesh" id=2]

[sub_resource type="SpatialMaterial" id=3]
flags_transparent = true
flags_unshaded = true
albedo_color = Color( 1, 0, 0, 0.313726 )

[sub_resource type="CubeMesh" id=4]
size = Vector3( 0.5, 0.5, 1.25 )

[sub_resource type="SpatialMaterial" id=5]
albedo_color = Color( 1, 0, 0, 1 )

[sub_resource type="PrismMesh" id=6]
size = Vector3( 1, 0.5, 0.5 )

[node name="SnapArea" type="Area"]
script = ExtResource( 1 )

[node name="IndicatorShape" type="CollisionShape" parent="."]
shape = SubResource( 1 )

[node name="Indicator" type="Spatial" parent="."]
visible = false

[node name="IndicatorShape" type="MeshInstance" parent="Indicator"]
mesh = SubResource( 2 )
material/0 = SubResource( 3 )

[node name="Arrow" type="MeshInstance" parent="Indicator"]
transform = Transform( -2.18557e-08, -0.5, -2.18557e-08, 0, -2.18557e-08, 0.5, -0.5, 2.18557e-08, 9.55343e-16, 0, -0.104907, -0.184047 )
mesh = SubResource( 4 )
material/0 = SubResource( 5 )

[node name="Point" type="MeshInstance" parent="Indicator/Arrow"]
transform = Transform( 1, -4.37114e-08, -4.37114e-08, -4.37114e-08, -4.37114e-08, -1, 4.37114e-08, 1, -4.37114e-08, 0, 0, 0.759683 )
mesh = SubResource( 6 )
material/0 = SubResource( 5 )

[node name="Arrow2" type="MeshInstance" parent="Indicator"]
transform = Transform( -2.18557e-08, -0.5, 1.77876e-21, 0.5, -2.18557e-08, 5.32905e-15, -5.32905e-15, 2.01171e-21, 0.5, 0, -0.3, 0 )
mesh = SubResource( 4 )
material/0 = SubResource( 5 )

[node name="Point" type="MeshInstance" parent="Indicator/Arrow2"]
transform = Transform( 1, -4.37114e-08, -4.37114e-08, -4.37114e-08, -4.37114e-08, -1, 4.37114e-08, 1, -4.37114e-08, 0, 0, 0.7 )
mesh = SubResource( 6 )
material/0 = SubResource( 5 )

[connection signal="input_event" from="." to="." method="_on_IndicatorArea_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_IndicatorArea_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_IndicatorArea_mouse_exited"]
